--- a/angular.json
+++ b/angular.json
@@ -2,5 +2,130 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "shop": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        },
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
+      "root": "projects/shop",
+      "sourceRoot": "projects/shop/src",
+      "prefix": "agoria-shop",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/shop",
+            "index": "projects/shop/src/index.html",
+            "main": "projects/shop/src/main.ts",
+            "polyfills": "projects/shop/src/polyfills.ts",
+            "tsConfig": "projects/shop/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "projects/shop/src/favicon.ico",
+              "projects/shop/src/assets"
+            ],
+            "styles": [
+              "projects/shop/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/shop/src/environments/environment.ts",
+                  "with": "projects/shop/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "shop:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "shop:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "shop:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/shop/src/test.ts",
+            "polyfills": "projects/shop/src/polyfills.ts",
+            "tsConfig": "projects/shop/tsconfig.spec.json",
+            "karmaConfig": "projects/shop/karma.conf.js",
+            "assets": [
+              "projects/shop/src/favicon.ico",
+              "projects/shop/src/assets"
+            ],
+            "styles": [
+              "projects/shop/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/shop/tsconfig.app.json",
+              "projects/shop/tsconfig.spec.json",
+              "projects/shop/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/shop/e2e/protractor.conf.js",
+            "devServerTarget": "shop:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "shop:serve:production"
+            }
+          }
+        }
+      }
+    }},
+  "defaultProject": "shop"
 }
